// =============================================
// AKADEMİK NOT VE DEVAM TAKİP SİSTEMİ
// ER DİYAGRAMI - dbdiagram.io için DBML Kodu
// =============================================
// 
// KULLANIM:
// 1. https://dbdiagram.io adresine gidin
// 2. Bu kodun tamamını kopyalayın
// 3. Sol panele yapıştırın
// 4. Sağ üstten "Export" -> "Export to PNG" seçin
// =============================================

// ========== TEMEL TABLOLAR ==========

Table Roles {
  RoleID int [pk, increment]
  RoleName nvarchar(50) [unique, not null]
  Description nvarchar(255)
  
  Note: 'Kullanıcı rolleri: Admin, Academic, Student'
}

Table Users {
  UserID int [pk, increment]
  RoleID int [not null, ref: > Roles.RoleID]
  Username nvarchar(50) [unique, not null]
  PasswordHash varbinary(256) [not null]
  PasswordSalt varbinary(128) [not null]
  Email nvarchar(255) [unique, not null]
  Phone nvarchar(20)
  IsActive bit [default: 1]
  LastLoginAt datetime2
  CreatedAt datetime2 [default: `SYSUTCDATETIME()`]
  
  Note: 'Tüm kullanıcıların ortak bilgileri'
}

Table Departments {
  DepartmentID int [pk, increment]
  FacultyName nvarchar(100) [not null]
  DepartmentName nvarchar(100) [not null]
  ChairID int [ref: > Users.UserID]
  
  Note: 'Fakülte ve bölümler'
}

Table Programs {
  ProgramID int [pk, increment]
  DepartmentID int [not null, ref: > Departments.DepartmentID]
  ProgramName nvarchar(150) [not null]
  DegreeLevel nvarchar(50) [not null]
  CreditRequirement int [not null]
  
  Note: 'Lisans/Yüksek Lisans programları'
}

// ========== KULLANICI ALT TİPLERİ ==========

Table Students {
  StudentID int [pk, ref: - Users.UserID]
  StudentNumber nvarchar(20) [unique, not null]
  NationalID nvarchar(20) [unique, not null]
  FirstName nvarchar(50) [not null]
  LastName nvarchar(50) [not null]
  BirthDate date [not null]
  Gender char(1)
  DepartmentID int [not null, ref: > Departments.DepartmentID]
  ProgramID int [ref: > Programs.ProgramID]
  AdvisorID int [ref: > Users.UserID]
  EnrollmentYear smallint
  
  Note: 'Öğrenci detay bilgileri (Users alt tipi)'
}

Table Academics {
  AcademicID int [pk, ref: - Users.UserID]
  Title nvarchar(50)
  DepartmentID int [not null, ref: > Departments.DepartmentID]
  Office nvarchar(50)
  PhoneExtension nvarchar(10)
  
  Note: 'Akademisyen detay bilgileri (Users alt tipi)'
}

// ========== DERS YAPISI ==========

Table Courses {
  CourseID int [pk, increment]
  CourseCode nvarchar(20) [unique, not null]
  CourseName nvarchar(150) [not null]
  ProgramID int [not null, ref: > Programs.ProgramID]
  Credit decimal(4,2) [not null]
  ECTS decimal(4,1) [not null]
  SemesterOffered tinyint
  
  Note: 'Ders tanımları'
}

Table CourseOfferings {
  OfferingID int [pk, increment]
  CourseID int [not null, ref: > Courses.CourseID]
  AcademicID int [not null, ref: > Academics.AcademicID]
  Term nvarchar(20) [not null]
  Section nvarchar(5) [not null]
  Capacity int [not null]
  ScheduleJSON nvarchar(max)
  CreatedAt datetime2 [default: `SYSUTCDATETIME()`]
  
  Note: 'Dönemsel ders açılışları'
}

Table ClassSessions {
  SessionID int [pk, increment]
  OfferingID int [not null, ref: > CourseOfferings.OfferingID]
  SessionDate date [not null]
  StartTime time [not null]
  EndTime time [not null]
  SessionType nvarchar(20) [not null]
  Location nvarchar(50)
  
  Note: 'Haftalık ders oturumları (14 hafta)'
}

// ========== KAYIT VE NOTLANDIRMA ==========

Table Enrollments {
  EnrollmentID int [pk, increment]
  OfferingID int [not null, ref: > CourseOfferings.OfferingID]
  StudentID int [not null, ref: > Students.StudentID]
  EnrollStatus nvarchar(30) [default: 'Active']
  EnrolledAt datetime2 [default: `SYSUTCDATETIME()`]
  DroppedAt datetime2
  CurrentAverage decimal(5,2)
  LetterGrade nvarchar(5)
  AttendancePercent decimal(5,2)
  StatusUpdatedAt datetime2
  
  indexes {
    (OfferingID, StudentID) [unique]
  }
  
  Note: 'Öğrenci ders kayıtları'
}

Table GradeComponents {
  ComponentID int [pk, increment]
  OfferingID int [not null, ref: > CourseOfferings.OfferingID]
  ComponentName nvarchar(50) [not null]
  WeightPercent decimal(5,2) [not null]
  IsMandatory bit [default: 1]
  
  Note: 'Not bileşenleri: Vize, Final, Ödev vb.'
}

Table Grades {
  GradeID int [pk, increment]
  EnrollmentID int [not null, ref: > Enrollments.EnrollmentID]
  ComponentID int [not null, ref: > GradeComponents.ComponentID]
  Score decimal(5,2) [not null]
  ScoreDate datetime2 [default: `SYSUTCDATETIME()`]
  GradedBy int [not null, ref: > Users.UserID]
  Notes nvarchar(255)
  
  indexes {
    (EnrollmentID, ComponentID) [unique]
  }
  
  Note: 'Öğrenci notları'
}

// ========== YOKLAMA SİSTEMİ ==========

Table AttendancePolicies {
  PolicyID int [pk, increment]
  OfferingID int [unique, not null, ref: > CourseOfferings.OfferingID]
  MaxAbsencePercent decimal(5,2) [not null]
  WarningThresholdPercent decimal(5,2) [not null]
  AutoFailPercent decimal(5,2) [not null]
  CreatedAt datetime2 [default: `SYSUTCDATETIME()`]
  
  Note: 'Devamsızlık politikaları'
}

Table Attendance {
  AttendanceID int [pk, increment]
  SessionID int [not null, ref: > ClassSessions.SessionID]
  StudentID int [not null, ref: > Students.StudentID]
  Status nvarchar(20) [not null, note: 'Present, Absent, Late, Excused']
  RecordedAt datetime2 [default: `SYSUTCDATETIME()`]
  RecordedBy int [not null, ref: > Users.UserID]
  Remarks nvarchar(255)
  
  indexes {
    (SessionID, StudentID) [unique]
  }
  
  Note: 'Yoklama kayıtları'
}

Table AttendanceAlerts {
  AlertID int [pk, increment]
  EnrollmentID int [not null, ref: > Enrollments.EnrollmentID]
  AlertType nvarchar(30) [not null, note: 'Warning, AutoFail']
  TriggeredAt datetime2 [default: `SYSUTCDATETIME()`]
  
  Note: 'Devamsızlık uyarıları'
}

// ========== BİLDİRİM VE DENETİM ==========

Table Notifications {
  NotificationID int [pk, increment]
  UserID int [not null, ref: > Users.UserID]
  Type nvarchar(30) [not null]
  Title nvarchar(150) [not null]
  Message nvarchar(1000) [not null]
  IsRead bit [default: 0]
  CreatedAt datetime2 [default: `SYSUTCDATETIME()`]
  
  Note: 'Kullanıcı bildirimleri'
}

Table AuditLog {
  AuditID bigint [pk, increment]
  TableName nvarchar(100) [not null]
  RecordID nvarchar(100) [not null]
  ActionType nvarchar(30) [not null]
  ChangedBy int [not null, ref: > Users.UserID]
  ChangeTimestamp datetime2 [default: `SYSUTCDATETIME()`]
  ChangeDetails nvarchar(max)
  
  Note: 'Sistem denetim kayıtları'
}

// ========== TABLO GRUPLARI ==========

TableGroup KullaniciBilgileri {
  Roles
  Users
  Students
  Academics
}

TableGroup AkademikYapi {
  Departments
  Programs
  Courses
  CourseOfferings
  ClassSessions
}

TableGroup KayitVeNotlandirma {
  Enrollments
  GradeComponents
  Grades
}

TableGroup YoklamaSistemi {
  AttendancePolicies
  Attendance
  AttendanceAlerts
}

TableGroup SistemYonetimi {
  Notifications
  AuditLog
}

